test/param/config/ambiguousConfigType.good
ambiguousConfigType.chpl:6: error: Ambiguous config type name (PV)
